<resources>
    <string name="app_name">calculator</string>
    <string name="display_default">0</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="dot">.</string>
    <string name="add">+</string>
    <string name="sub">−</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="back">⌫</string>
</resources>
